spectec/test/elab/neg/parse-hint-on-plain-bar-single.spectec
;; Plain-type alias declared with a leading bar carries a hint, which is
;; only allowed on variant cases.

syntax foo = | nat hint(blah)
